@@ -83,6 +83,7 @@ If you get stuck, you can ask for help in the Plugin Forum.
 == Changelog ==
 = 1.0.0 - 2021-05-12 =
 
+* 2021-08-04 : fix bug some Wordpress version can't working
 * 2021-07-02 : fix bug credit card and installment with option buyer pay fees
 * 2021-06-28 : verify credit card payment form
 * 2021-06-23 : add shortcut credit card on place order page
