@@ -1,6 +1,7 @@
 == Changelog ==
 = 1.0.0 - 2021-03-11 =
 
+* 2021-08-04 : fix bug some Wordpress version can't working
 * 2021-07-02 : fix bug credit card and installment with option buyer pay fees
 * 2021-06-28 : verify credit card payment form
 * 2021-06-23 : add shortcut credit card on place order page
